Fix overflow of highlight css

--- a/app/assets/stylesheets/highlighting.css.scss
+++ b/app/assets/stylesheets/highlighting.css.scss
@@ -3,6 +3,7 @@
   padding-right: 15px;
   border: 1px solid #888;
   background: #ddd;
+  overflow: hidden;
 
   .hll { background-color: #ffffcc }
   .c { color: #408080; font-style: italic } /* Comment */
